2025-12-16T12:19:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20267678306 # 1369
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 12 99
* notice: prev accum: outdated-unq outdated-all / unq all: 1299 6120 / 1311 6217
* notice: next accum: outdated-unq outdated-all / unq all: 1299 6120 / 1313 6219
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-12-16]

2025-12-16T00:47:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20252583392 # 1368
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
* notice: last 14d: unq all: 10 97
* notice: prev accum: outdated-unq outdated-all / unq all: 1297 6104 / 1310 6215
* notice: next accum: outdated-unq outdated-all / unq all: 1299 6120 / 1311 6217
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2025-12-01] / [2025-12-15]

2025-12-15T00:50:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20216964877 # 1366
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-15
* notice: last 14d: unq all: 11 111
* notice: prev accum: outdated-unq outdated-all / unq all: 1295 6102 / 1310 6215
* notice: next accum: outdated-unq outdated-all / unq all: 1297 6104 / 1310 6215
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-30] / []

2025-12-13T00:43:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20183993331 # 1362