@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-12-16T12:19:35Z",
-  "count_outdated" : 6120,
-  "uniques_outdated" : 1299,
+  "timestamp" : "2025-12-17T00:43:27Z",
+  "count_outdated" : 6121,
+  "uniques_outdated" : 1300,
   "count" : 6219,
   "uniques" : 1313,
   "views" : [
-    {
-      "timestamp": "2025-12-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-12-05T00:00:00Z",
       "count": 3,
