@@ -1,12 +1,7 @@
 {
-  "count": 99,
-  "uniques": 12,
+  "count": 98,
+  "uniques": 11,
   "views": [
-    {
-      "timestamp": "2025-12-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-12-05T00:00:00Z",
       "count": 3,
