@@ -1,3 +1,12 @@
+2025-12-17T00:43:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20287631580 # 1370
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-17
+* notice: last 14d: unq all: 11 98
+* notice: prev accum: outdated-unq outdated-all / unq all: 1299 6120 / 1313 6219
+* notice: next accum: outdated-unq outdated-all / unq all: 1300 6121 / 1313 6219
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-12-02] / []
+
 2025-12-16T12:19:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20267678306 # 1369
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-16
